welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: not found: value ||
	if ((a<=19 && a>130) || (b>=13 && b<=19)) || (13<=c && c<=19){
                                                  ^